--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,29 +1,31 @@
 name: flutter_application_1
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=2.19.3 <4.0.0'
+  sdk: ">=2.19.3 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-   
-
 
   firebase_auth: ^4.2.9
   cloud_firestore: ^4.4.3
   provider: ^6.0.5
   # fluttertoast: ^8.2.1
   firebase_core: ^2.7.0
+  animated_snack_bar: ^0.3.0
+  m_toast: ^0.2.0
+  motion_toast: ^2.6.5
+  settings_ui: ^2.0.2
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  
 
 flutter:
   uses-material-design: true
+
