--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,27 @@ dependencies:
   firebase_auth: ^4.2.9
   cloud_firestore: ^4.4.3
   provider: ^6.0.5
-  # fluttertoast: ^8.2.1
   firebase_core: ^2.7.0
   animated_snack_bar: ^0.3.0
   m_toast: ^0.2.0
   motion_toast: ^2.6.5
   settings_ui: ^2.0.2
   get: ^4.6.5
+  flutter_dialogs: ^3.0.0
+  file_picker: ^5.2.9
+  firebase_storage: ^11.1.0
+  mailer: ^6.0.1
+  flutter_email_sender: ^5.2.0
+  url_launcher: ^6.1.10
+  font_awesome_flutter: ^10.4.0
+  favorite_button: ^0.0.4
+  shared_preferences: ^2.0.8
+  open_filex: ^4.3.2
+  better_open_file: ^3.6.4
+  open_file_plus: ^3.4.1
+  dcdg: ^4.1.0
+  mockito: ^5.3.0
+
 
 dev_dependencies:
   flutter_test:
@@ -28,4 +42,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+
+
+
+
 
